--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,10 @@
 language: csharp
 solution: sonarcloudtest.sln
+# https://github.com/travis-ci/travis-ci/issues/5932
+before_install:
+  - mkdir -p .nuget
+  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+  - mono .nuget/nuget.exe # Output NuGet's version number
+install:
+  - mono .nuget/nuget.exe restore <solution.sln> -Verbosity detailed
+  - mono .nuget/nuget.exe install NUnit.Runners -Version 3.2.1 -OutputDirectory ./src/packages
