--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: csharp
 solution: sonarcloudtest.sln
+sudo: required
 # https://github.com/travis-ci/travis-ci/issues/5932
 before_install:
   - mkdir -p .nuget
@@ -10,12 +11,14 @@ install:
   - mono .nuget/nuget.exe install NUnit.Runners -Version 3.2.1 -OutputDirectory ./src/packages
 addons:
   sonarcloud:
-    organization: "leandowich" # the key of the org you chose at step #3
+    organization: "Lean Randlev" # the key of the org you chose at step #3
     token:
       secure: "Z8QoqcK8GTAAVqq/E9onaBQUZZeNXjveB9F4Sp1SL1AlzLhn8vp8iQyy/3Mjoa0NBcNRGCY/2imre6pyikunbZ31/AFZDlDHrtZgLwb80Njd4AyX9mZbTMnhCTofRC4cB9PwhotjHDaPaAlL+h83F86lDoGpa58KZ3eqnh+gRclGdcCvnk5NtZ9pg3gMQzWUQI3wK
 OxC8T8cAj+fwLd2Zj0dIB+8YpRYT6DyVsj55sJgfPMfP3MepuLIMzMx6XO9jToewQIGN8v/GHxMRJO9VontTJyN1XjuiE/L5YDhznXfgc3x7JZztVgggPMAiIy5P2f3jL6VVMiOQ+7mk4Ab1rf3nxeHSasoA2Gs79mZtvDYkXqWW+06N0YeFCt8KtDfBNG4mqrEsh9XRH5WZ4bNZ
 F9OQe+4anKnjAveXGl3vZdK8OxNWwSRQbKhU+lL/uC0OnBfTs2yg+dOM2phmNo0tD4Isjntql0IJD1me5dHLvOzTqXEFjETKnBVS8RRJblIq8mnskslp7Z4KaQxgG/lwoI42/pQ+dRJEPlVO+jy99rkCs328j9uPCM0LRcEs2CK5MUf2hjqQxAmdyRztKK3Hh2k+gCP+7h45qovx
 utaPs1/WiMYxrL8Y53RS4Kv2uXHWCEG/YTgA2BRs9ZsijbkUXaaYOfyxh5Keq7ddTA6jB8=" # encrypted value of your token
+jdk:
+  - oraclejdk8
 script:
   # other script steps might be done before running the actual analysis
   - sonar-scanner
