--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,28 @@
-# must be unique in a given SonarQube instance
 sonar.projectKey=leandowich-projectkey
-# this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
-sonar.projectName=SonarTest
-sonar.projectVersion=1.0
- 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-# This property is optional if sonar.modules is set. 
-sonar.sources=.
- 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.projectName=Project Name
+
+# =====================================================
+#   Meta-data for the project
+# =====================================================
+
+sonar.links.homepage=https://github.com/username/project-repo
+sonar.links.ci=https://travis-ci.org/username/project-repo
+sonar.links.scm=https://github.com/username/project-repo
+sonar.links.issue=https://github.com/username/project-repo/issues
+
+
+# =====================================================
+#   Properties that will be shared amongst all modules
+# =====================================================
+
+sonar.host.url=https://sonarcloud.io
+sonar.organization=leandowich-github
+sonar.login=2b853ca1c63ad1105058bd821f77319a69ef6e1d
+sonar.sources=src
+sonar.exclusions=node_modules/**/*
+
+# =====================================================
+#   Java config
+# =====================================================
+sonar.java.source=1.8
+sonar.java.binaries=.
