--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=leandowich-projectkey
 sonar.projectName=Project Name
+sonar.projectVersion=1.0
 
 # =====================================================
 #   Meta-data for the project
