--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,7 @@ sonar.host.url=https://sonarcloud.io
 sonar.organization=leandowich-github
 sonar.login=2b853ca1c63ad1105058bd821f77319a69ef6e1d
 sonar.sources=.
-sonar.exclusions=node_modules/**/*
+# sonar.exclusions=node_modules/**/*
 
 # =====================================================
 #   Java config
