--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 install:
   - mono .nuget/nuget.exe restore <sonarcloudtest.sln> -Verbosity
   - mono .nuget/nuget.exe install NUnit.Runners -Version 3.2.1 -OutputDirectory ./src/packages
+  - npm install -g typescript
 addons:
   sonarcloud:
     organization: leandowich-github # the key of the org you chose at step #3
