--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ addons:
 
 script:
   # other script steps might be done before running the actual analysis
-  - sonar-scanner
+  - sonar-scanner -X
