--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
   sonarcloud:
     organization: leandowich-github # the key of the org you chose at step #3
     token: $SONAR_TOKEN
-
+    github_token: $GITHUB_TOKEN
 script:
   - dotnet build
   - sonar-scanner
