adding to tslint setup

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=leandowich-projectkey
 sonar.projectName=Project Name
 sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8
 
 # =====================================================
 #   Meta-data for the project
@@ -20,6 +21,10 @@ sonar.host.url=https://sonarcloud.io
 sonar.organization=leandowich-github
 sonar.sources=.
 sonar.exclusions=**/node_modules/**/*,**/dist/**/*
+sonar.tests=src
+sonar.test.inclusions=**/*.spec.ts
+sonar.ts.tslintconfigpath=tslint.json
+sonar.ts.lcov.reportpath=test-results/coverage/coverage.lcov
 
 # =====================================================
 #   Java config
