--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,8 +21,8 @@ sonar.host.url=https://sonarcloud.io
 sonar.organization=leandowich-github
 sonar.sources=.
 sonar.exclusions=**/node_modules/**/*,**/dist/**/*
-sonar.tests=src
-sonar.test.inclusions=**/*.spec.ts
+# sonar.tests=src
+# sonar.test.inclusions=**/*.spec.ts
 sonar.ts.tslintconfigpath=tslint.json
 sonar.ts.lcov.reportpath=test-results/coverage/coverage.lcov
 
