--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: csharp
 solution: sonarcloudtest.sln
-mono: none
+# mono: none
 dotnet: 2.1.4
 before_install:
   - npm install -g npm
@@ -15,5 +15,7 @@ addons:
     branches:
       - .*
 script:
+  - mono ../tools/sonar/SonarQube.Scanner.MSBuild.exe begin /n:NGenerics /k:leandowich-github /d:sonar.login=${SONAR_TOKEN} /d:sonar.host.url="https://sonarcloud.io" /d:sonar.cs.vstest.reportsPaths="*/TestResults/.trx" /v:"2.0"
   - dotnet build
-  - sonar-scanner
+  - mono ../tools/sonar/SonarQube.Scanner.MSBuild.exe end /d:sonar.login=${SONAR_TOKEN}
+#  - sonar-scanner
