--- a/sonarcloudtest/sonarcloudtest.csproj
+++ b/sonarcloudtest/sonarcloudtest.csproj
@@ -50,4 +50,13 @@
     </ItemGroup>
   </Target>
 
+  <ItemGroup>
+    <SonarQubeSetting Include="sonar.ts.tslintconfigpath">
+      <Value>tslint.json</Value>
+    </SonarQubeSetting>
+    <SonarQubeSetting Include="sonar.ts.lcov.reportpath">
+      <Value>test-results/coverage/coverage.lcov</Value>
+    </SonarQubeSetting>
+  </ItemGroup>
+
 </Project>
